--- a/src/shared/astro/Video.astro
+++ b/src/shared/astro/Video.astro
@@ -37,6 +37,7 @@ if (url.hostname.endsWith("vimeo.com")) {
 <style lang="scss">
   .video-wrapper {
     position: absolute;
+    overflow: hidden;
 
     display: flex;
     flex-direction: column;
